Version 1.0.0-devel - development
    - Added new functions in "classes/states.h":
        qpp::States::mes() - maximally entangled state of 2 qudits
    - Added new functions in "random.h":
        qpp::randprob() - random probability vector uniformly distributed over
                          the probability simplex

Version 1.0.0-beta2 - 13 October 2016
    - Updated to GoogleTest 1.8.0 for unit testing
    - Added d = 2 overloads for all functions that take a list of dimensions
      as one of their arguments
    - Additional code sanitizing and unit testing

Version 1.0.0-beta1 - 10 October 2016
    - GoogleMock 1.7.0 is now included in the project for portable unit testing
        (see the README.md file for more details)
    - Removed the qpp::ubigint type so there is no more danger of mixing
        signed and unsigned types. All related functions now use qpp::bigint.
    - Fixed overflow bug in qpp::powm() when numbers were very large
    - qpp::isprime() is now based on the Miller-Rabin primality test
    - qpp::rand(Type a, Type b) family of functions now throw if b > a for
        integer types or when a == b for floating-point types
    - Added new functions in "number_theory.h":
        qpp::randprime() - random prime number generator
        qpp::modmul()    - modular multiplication that avoids overflows
    - Additional unit testing, added unit testing skeleton for all codebase

Version 0.8.8.2 - 3 October 2016
    - This is a bug-fix release
    - Fixed compile bug in qpp::measure_seq() due to trying to modify a const
        copy, which should have been non-const

Version 0.8.8 - 30 September 2016
    - Added OpenMP support for clang >= 3.7 in CmakeLists.txt
    - Required minimum CMake version is now 3.0
    - Added more unit testing, "number_theory.h" is now fully tested
    - Split unit testing in separate files according to the tested header file
    - Fixed typo in CMakeLists.txt which in effect disabled OpenMP