@@ -25,6 +25,6 @@
 
 int main(int argc, char** argv)
 {
-    ::ttesting::InitGoogleTest(&argc, argv);
+    ::testing::InitGoogleTest(&argc, argv);
     return RUN_ALL_TESTS();
 }
